doc dependencies in package.json

--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/st/inkbird-c929-logger/issues"
   },
-  "homepage": "https://github.com/dt/inkbird-c929-logger"
+  "homepage": "https://github.com/dt/inkbird-c929-logger",
+  "dependencies": {
+    "influx": "^5.5.1",
+    "tuyapi": "^5.1.3"
+  }
 }
